--- a/css/bumara.css
+++ b/css/bumara.css
@@ -66,7 +66,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: var(--font-display);
+    font-family: var(--font-display), serif;
     font-size: 6rem;
     font-weight: 700;
     color: #1a9b9e;
@@ -280,12 +280,18 @@
     text-align: center;
 }
 
-.team-member__photo {
-    width: 120px;
-    height: 120px;
-    background: linear-gradient(135deg, var(--sage), var(--mint));
-    border-radius: 50%;
-    margin: 0 auto 1rem;
+.team-member__photo__img {
+    /*width: 120px;*/
+    /*height: 120px;*/
+    /*background: linear-gradient(135deg, var(--sage), var(--mint));*/
+    /*border-radius: 50%;*/
+    /*margin: 0 auto 1rem;*/
+    /*overflow: hidden;*/
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
 
 .team-member h3 {
